# mlflow-template

./: .dist.envrc  .gitignore  Makefile  README.md  docker-compose.yaml  init.sh  pyproject.toml
data/: README.md
docker/: .gitignore
notebooks/: README.md
src/project_name/training/: demo.py
