[project]
name = "project_name"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Hernandez", email = "kevinhernem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mlflow (>=3.1)",
    "urllib3 (<2)",
    "boto3 (>=1.42.4,<2.0.0)",
    "ty (>=0.0.3,<0.0.4)",
]

[project.scripts]
demo = "project_name.training.demo:train"

[tool.poetry]
packages = [{include = "project_name", from = "src"}]
package-mode = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.0,<7.0)",
    "pytest (>=8.0,<9.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "pre-commit (>=4.5.0) ; python_version >= \"3.10\""
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN"]

[tool.ty.rules]
possibly-missing-attribute = "ignore"
unresolved-import = "warn"
unresolved-attribute = "warn"
division-by-zero = "warn"
invalid-assignment = "error"
call-non-callable = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
